--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Hi! I'm Amaya Sinha</strong>, a 5th year Ph.D<br />
 					candidate at the University of Utah<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					studying physics and astronomy</a>.</h1>
 				</div>
 			</header>
 
@@ -29,8 +29,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>Research<br />
 						</header>
 						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
 						<ul class="actions">
@@ -462,3 +461,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
