--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 						<header class="major">
 							<h2>Research<br />
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+<!-- 						<p>As a galactic archeologist, my research interests include stellar population chemistry, binary interaction, and stellar ages. -->
+						<p> Immediately after the Big Bang, the only elements in the Universe were hydrogen, helium, and a pinch of lithium. Understanding how we went from that simple broth to the complex stew of today's periodic table is at the core of galactic archeology. To understand this, we must understand the interplay between stars and their galactic environments. 
+						<p>My graduate thesis work attempted to study this by focusing on using the chemistry and ages of stellar populations, such as open clusters and binaries. To study stellar chemistry, I use radial velocities & high-resolution spectra from optical and near-infrared surveys such as GALAH and SDSS. And to study ages, I use synthetic stellar populations and integrated TESS lightcurves to detect variable star signals. </p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -462,5 +463,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
