added research section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Research<br />
+							<h2>What I Do<br />
 						</header>
 <!-- 						<p>As a galactic archeologist, my research interests include stellar population chemistry, binary interaction, and stellar ages. -->
 						<p> Immediately after the Big Bang, the only elements in the Universe were hydrogen, helium, and a pinch of lithium. Understanding how we went from that simple broth to the complex stew of today's periodic table is at the core of galactic archeology. To understand this, we must understand the interplay between stars and their galactic environments. 
@@ -39,9 +39,34 @@
 						</ul>
 					</section>
 
-				<!-- Two -->
+				<!-- One -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<header class="major">
+							<h2>Close Binaries<br />
+						</header>
+<!-- 						<p>As a galactic archeologist, my research interests include stellar population chemistry, binary interaction, and stellar ages. -->
+						<p> Immediately after the Big Bang, the only elements in the Universe were hydrogen, helium, and a pinch of lithium. Understanding how we went from that simple broth to the complex stew of today's periodic table is at the core of galactic archeology. To understand this, we must understand the interplay between stars and their galactic environments. 
+						<p>My graduate thesis work attempted to study this by focusing on using the chemistry and ages of stellar populations, such as open clusters and binaries. To study stellar chemistry, I use radial velocities & high-resolution spectra from optical and near-infrared surveys such as GALAH and SDSS. And to study ages, I use synthetic stellar populations and integrated TESS lightcurves to detect variable star signals. </p>
+						<ul class="actions">
+							<li><a href="#" class="button">Learn More</a></li>
+						</ul>
+						<header class="major">
+							<h2>Open Clusters<br />
+						</header>
+<!-- 						<p>As a galactic archeologist, my research interests include stellar population chemistry, binary interaction, and stellar ages. -->
+						<p> Immediately after the Big Bang, the only elements in the Universe were hydrogen, helium, and a pinch of lithium. Understanding how we went from that simple broth to the complex stew of today's periodic table is at the core of galactic archeology. To understand this, we must understand the interplay between stars and their galactic environments. 
+						<p>My graduate thesis work attempted to study this by focusing on using the chemistry and ages of stellar populations, such as open clusters and binaries. To study stellar chemistry, I use radial velocities & high-resolution spectra from optical and near-infrared surveys such as GALAH and SDSS. And to study ages, I use synthetic stellar populations and integrated TESS lightcurves to detect variable star signals. </p>
+						<ul class="actions">
+							<li><a href="#" class="button">Learn More</a></li>
+						</ul>
+						<header class="major">
+							<h2>Publications<br />
+						</header>
+					</section>
+
+				<!-- Two -->
+					<section id="three">
+						<h2>Science Communication</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
@@ -80,9 +105,8 @@
 					</section>
 
 				<!-- Three -->
-					<section id="three">
+					<section id="four">
 						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
@@ -99,18 +123,8 @@
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
-										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
-									</li>
-									<li>
-										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
-									</li>
-									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">u1363702 at utah dot edu</a>
 									</li>
 								</ul>
 							</div>
@@ -463,6 +477,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
