--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>What I Do<br />
+							<h1>What I Do<br />
 						</header>
 <!-- 						<p>As a galactic archeologist, my research interests include stellar population chemistry, binary interaction, and stellar ages. -->
 						<p> Immediately after the Big Bang, the only elements in the Universe were hydrogen, helium, and a pinch of lithium. Understanding how we went from that simple broth to the complex stew of today's periodic table is at the core of galactic archeology. To understand this, we must understand the interplay between stars and their galactic environments. 
@@ -41,6 +41,10 @@
 
 				<!-- One -->
 					<section id="two">
+						<header class="major">
+							<h1>Research<br />
+						</header>
+						
 						<header class="major">
 							<h2>Close Binaries<br />
 						</header>
@@ -477,6 +481,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
