--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 						<header class="major">
 							<h2>Publications<br />
 						</header>
+						<a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
 					</section>
 
 				<!-- Two -->
@@ -481,6 +482,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
