--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 						<header class="major">
 							<h2>Publications<br />
 						</header>
-						<a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
+						<p>Sinha A., Chemical Variations in Close Binaries, <i>in prep.</i></p>
+						<a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...975...89S/abstract">[1]Sinha, A., “A Comprehensive Study of Open Cluster Chemical Homogeneity Using APOGEE and Milky Way Mapper Abundances”, <i>The Astrophysical Journal</i>, vol. 975, no. 1, Art. no. 89, IOP, 2024. doi:10.3847/1538-4357/ad78e1</a>
 					</section>
 
 				<!-- Two -->
@@ -482,6 +483,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
