--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
 							<h2>Close Binaries<br />
 						</header>
 <!-- 						<p>As a galactic archeologist, my research interests include stellar population chemistry, binary interaction, and stellar ages. -->
-						<p> Immediately after the Big Bang, the only elements in the Universe were hydrogen, helium, and a pinch of lithium. Understanding how we went from that simple broth to the complex stew of today's periodic table is at the core of galactic archeology. To understand this, we must understand the interplay between stars and their galactic environments. 
-						<p>My graduate thesis work attempted to study this by focusing on using the chemistry and ages of stellar populations, such as open clusters and binaries. To study stellar chemistry, I use radial velocities & high-resolution spectra from optical and near-infrared surveys such as GALAH and SDSS. And to study ages, I use synthetic stellar populations and integrated TESS lightcurves to detect variable star signals. </p>
+						<p> While our own Sun is alone, many of the stars in our galaxy have companions. While some of these binaries have separations of 1000's of astronomical units (so called "wide" binaries) and can be studied fairly easily, studying close binaries (or binaries with separations < 100 AU) is significantly more difficult. Stars this close to one another aren't usually resolvable individually on the sky, meaning studying their intra-pair chemistry is impossible. And yet! Studying their chemistry is crucial for understanding binary star evolution, as stars this close can undergo truly fascinating evolution (e.g. common envelope evolution, mass transfer), which can affect their surface abundances through a variety of mechanisms. However even at these small separations, if both stars stay in a detached configuration, do they still have their birth chemistry?  To answer this, we studied close binaries in open clusters using SDSS-V APOGEE spectra and radial velocities. We determined binary membership for over a dozen open clusters, using through RV variability, and then performed a detailed abundance analysis using BACCHUS. The results of this paper were presented at the 2025 Sloan Collaboration meeting, and will be published in Sinha et. al <i> in prep. </i> </p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -58,16 +57,14 @@
 							<h2>Open Clusters<br />
 						</header>
 <!-- 						<p>As a galactic archeologist, my research interests include stellar population chemistry, binary interaction, and stellar ages. -->
-						<p> Immediately after the Big Bang, the only elements in the Universe were hydrogen, helium, and a pinch of lithium. Understanding how we went from that simple broth to the complex stew of today's periodic table is at the core of galactic archeology. To understand this, we must understand the interplay between stars and their galactic environments. 
-						<p>My graduate thesis work attempted to study this by focusing on using the chemistry and ages of stellar populations, such as open clusters and binaries. To study stellar chemistry, I use radial velocities & high-resolution spectra from optical and near-infrared surveys such as GALAH and SDSS. And to study ages, I use synthetic stellar populations and integrated TESS lightcurves to detect variable star signals. </p>
+						<p> Most stars in the Milky Way are born in open clusters (such as the Pleiades!). These clusters are born when a molecular cloud collapses and triggers star formation. Given that all the stars from a cluster are formed from the same molecular cloud, at the same time, they shoulld all have the same chemistry right? Broadly yes! But the degree to which the stars from a single cluster were chemically identical was a little uncertain. To answer this, we studied nearly three dozen open clusters within the Milky Way to measure how chemically similar their cluster members were to one another. Using SDSS-IV Data Release 17 chemical abundances across 20 elements, we found no evidence of chemical variation, and that we could confidently constrain open cluster intrinsic scatter to within 0.1 dex. The results of this work were used in the calibrations of SDSS-V data releases, and were published in The Astrophysical Journal in the fall of 2024. </p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
 						<header class="major">
 							<h2>Publications<br />
 						</header>
-						<p>Sinha A., Chemical Variations in Close Binaries, <i>in prep.</i></p>
-						<a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...975...89S/abstract">[1]Sinha, A., “A Comprehensive Study of Open Cluster Chemical Homogeneity Using APOGEE and Milky Way Mapper Abundances”, <i>The Astrophysical Journal</i>, vol. 975, no. 1, Art. no. 89, IOP, 2024. doi:10.3847/1538-4357/ad78e1</a>
+						<a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...975...89S/abstract">[1] Sinha, A., “A Comprehensive Study of Open Cluster Chemical Homogeneity Using APOGEE and Milky Way Mapper Abundances”, <i>The Astrophysical Journal</i>, vol. 975, no. 1, Art. no. 89, IOP, 2024. doi:10.3847/1538-4357/ad78e1</a>
 					</section>
 
 				<!-- Two -->
@@ -76,32 +73,12 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
+								<h3>AstroBites</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
+								<h3>Astronomy on Tap</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 						</div>
@@ -483,6 +460,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
