--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="website_main_pic.JPG" alt="" width="500" height="600" /></a>
+					<a href="#" class="image avatar"><img src="website_main_pic.JPG" alt="" /></a>
 					<h1><strong>Hi! I'm Amaya Sinha</strong>, a 5th year Ph.D<br />
 					candidate at the University of Utah<br />
 					studying physics and astronomy</a>.</h1>
@@ -460,6 +460,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
