--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
+						<a href="page2.html"><button>Click Me</button></a>
 					</section>
 
 				<!-- One -->
@@ -460,6 +461,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
