--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
-						<a href="page2.html"><button>Click Me</button></a>
+						<ul class="actions">
+							<li><a href="page2.html" class="button">PENGUINS</a></li>
+						</ul>
 					</section>
 
 				<!-- One -->
@@ -461,6 +463,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
