--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,5 @@
 <iframe
-	src="https://drive.google.com/viewerng/viewer?embedded=true&url=http://infolab.stanford.edu/pub/papers/google.pdf#toolbar=0&scrollbar=0"
+	src="https://docs.google.com/document/d/1OxJGb0MrcK1km0amniE3KWA9-Y-CqZQx/edit?usp=sharing&ouid=111386069790049062218&rtpof=true&sd=true"
 	frameBorder="0"
     	scrolling="auto"
     	height="100%"
