--- a/page3.html
+++ b/page3.html
@@ -1,1 +1,93 @@
-ospreys!!!
+<!DOCTYPE HTML>
+<!--
+	Strata by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<body class="is-preload">
+
+		<!-- Header -->
+			<header id="header">
+				<div class="inner">
+					<h1><strong>Research</strong></h1>
+				</div>
+			</header>
+
+				<!-- One -->
+					<section id="two">
+						<header class="major">
+							<h1>Research<br />
+						</header>
+						
+						<header class="major">
+							<h2>Close Binaries<br />
+						</header>
+<!-- 						<p>As a galactic archeologist, my research interests include stellar population chemistry, binary interaction, and stellar ages. -->
+						<p> While our own Sun is alone, many of the stars in our galaxy have companions. While some of these binaries have separations of 1000's of astronomical units (so called "wide" binaries) and can be studied fairly easily, studying close binaries (or binaries with separations < 100 AU) is significantly more difficult. Stars this close to one another aren't usually resolvable individually on the sky, meaning studying their intra-pair chemistry is impossible. And yet! Studying their chemistry is crucial for understanding binary star evolution, as stars this close can undergo truly fascinating evolution (e.g. common envelope evolution, mass transfer), which can affect their surface abundances through a variety of mechanisms. However even at these small separations, if both stars stay in a detached configuration, do they still have their birth chemistry?  To answer this, we studied close binaries in open clusters using SDSS-V APOGEE spectra and radial velocities. We determined binary membership for over a dozen open clusters, using through RV variability, and then performed a detailed abundance analysis using BACCHUS. The results of this paper were presented at the 2025 Sloan Collaboration meeting, and will be published in Sinha et. al <i> in prep. </i> </p>
+						<ul class="actions">
+							<li><a href="#" class="button">Learn More</a></li>
+						</ul>
+						<header class="major">
+							<h2>Open Clusters<br />
+						</header>
+<!-- 						<p>As a galactic archeologist, my research interests include stellar population chemistry, binary interaction, and stellar ages. -->
+						<p> Most stars in the Milky Way are born in open clusters (such as the Pleiades!). These clusters are born when a molecular cloud collapses and triggers star formation. Given that all the stars from a cluster are formed from the same molecular cloud, at the same time, they shoulld all have the same chemistry right? Broadly yes! But the degree to which the stars from a single cluster were chemically identical was a little uncertain. To answer this, we studied nearly three dozen open clusters within the Milky Way to measure how chemically similar their cluster members were to one another. Using SDSS-IV Data Release 17 chemical abundances across 20 elements, we found no evidence of chemical variation, and that we could confidently constrain open cluster intrinsic scatter to within 0.1 dex. The results of this work were used in the calibrations of SDSS-V data releases, and were published in The Astrophysical Journal in the fall of 2024. </p>
+						<ul class="actions">
+							<li><a href="#" class="button">Learn More</a></li>
+						</ul>
+						<header class="major">
+							<h2>Publications<br />
+						</header>
+						<a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...975...89S/abstract">[1] Sinha, A., “A Comprehensive Study of Open Cluster Chemical Homogeneity Using APOGEE and Milky Way Mapper Abundances”, <i>The Astrophysical Journal</i>, vol. 975, no. 1, Art. no. 89, IOP, 2024. doi:10.3847/1538-4357/ad78e1</a>
+					</section>
+
+
+
+			</div>
+
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="inner">
+					<ul class="icons">
+						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
+
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
