--- a/page3.html
+++ b/page3.html
@@ -5,17 +5,19 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<h1><strong>Research</strong></h1>
-				</div>
-			</header>
 
+		<!-- Main -->
+			<div id="main">
 				<!-- One -->
-					<section id="two">
+					<section id="one">
 						<header class="major">
 							<h1>Research<br />
 						</header>
@@ -41,25 +43,7 @@
 						</header>
 						<a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...975...89S/abstract">[1] Sinha, A., “A Comprehensive Study of Open Cluster Chemical Homogeneity Using APOGEE and Milky Way Mapper Abundances”, <i>The Astrophysical Journal</i>, vol. 975, no. 1, Art. no. 89, IOP, 2024. doi:10.3847/1538-4357/ad78e1</a>
 					</section>
-
-
-
 			</div>
-
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
