--- a/page3.html
+++ b/page3.html
@@ -19,14 +19,14 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h1> style="color:black" Research<br />
+							<h1> style="color:black">Research<br />
 						</header>
 						
 						<header class="major">
-							<h2> style="color:black" Close Binaries<br />
+							<h2> style="color:black">Close Binaries<br />
 						</header>
 <!-- 						<p>As a galactic archeologist, my research interests include stellar population chemistry, binary interaction, and stellar ages. -->
-						<p> style="color:black" While our own Sun is alone, many of the stars in our galaxy have companions. While some of these binaries have separations of 1000's of astronomical units (so called "wide" binaries) and can be studied fairly easily, studying close binaries (or binaries with separations < 100 AU) is significantly more difficult. Stars this close to one another aren't usually resolvable individually on the sky, meaning studying their intra-pair chemistry is impossible. And yet! Studying their chemistry is crucial for understanding binary star evolution, as stars this close can undergo truly fascinating evolution (e.g. common envelope evolution, mass transfer), which can affect their surface abundances through a variety of mechanisms. However even at these small separations, if both stars stay in a detached configuration, do they still have their birth chemistry?  To answer this, we studied close binaries in open clusters using SDSS-V APOGEE spectra and radial velocities. We determined binary membership for over a dozen open clusters, using through RV variability, and then performed a detailed abundance analysis using BACCHUS. The results of this paper were presented at the 2025 Sloan Collaboration meeting, and will be published in Sinha et. al <i> in prep. </i> </p>
+						<p> style="color:black">While our own Sun is alone, many of the stars in our galaxy have companions. While some of these binaries have separations of 1000's of astronomical units (so called "wide" binaries) and can be studied fairly easily, studying close binaries (or binaries with separations < 100 AU) is significantly more difficult. Stars this close to one another aren't usually resolvable individually on the sky, meaning studying their intra-pair chemistry is impossible. And yet! Studying their chemistry is crucial for understanding binary star evolution, as stars this close can undergo truly fascinating evolution (e.g. common envelope evolution, mass transfer), which can affect their surface abundances through a variety of mechanisms. However even at these small separations, if both stars stay in a detached configuration, do they still have their birth chemistry?  To answer this, we studied close binaries in open clusters using SDSS-V APOGEE spectra and radial velocities. We determined binary membership for over a dozen open clusters, using through RV variability, and then performed a detailed abundance analysis using BACCHUS. The results of this paper were presented at the 2025 Sloan Collaboration meeting, and will be published in Sinha et. al <i> in prep. </i> </p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
