--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 				<!-- Three -->
 					<section id="two">
 						<h2>Get In Touch</h2>
-						<div class="row">
+						<a href="mailto:u1363702@utah.edu">Click here to email me</a>
+						<a href="#">u1363702 at utah dot edu</a>
+						<!-- <div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
 									<div class="row gtr-uniform gtr-50">
@@ -68,7 +70,7 @@
 									</li>
 								</ul>
 							</div>
-						</div>
+						</div> -->
 					</section>
 
 				<!-- Four -->
@@ -417,6 +419,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
