--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<!-- Three -->
 					<section id="two">
 						<h2>Get In Touch</h2>
-						<p href="mailto:u1363702@utah.edu">Click here to email me</p>
+						<a href="mailto:u1363702@utah.edu">Click here to email me</a>
 						<p href="#">u1363702 at utah dot edu</p>
 						<!-- <div class="row">
 							<div class="col-8 col-12-small">
@@ -419,6 +419,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
