--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
+		<style>
+			body {background-image:"images/1920px-Pleiades_large.jpg";}
+		</style>
 
 		<!-- Header -->
 			<header id="header">
@@ -419,6 +422,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
