--- a/page3.html
+++ b/page3.html
@@ -5,13 +5,6 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-<head>
-<style>
-img {
-  border: 5px solid #555;
-}
-</style>
-</head>
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -26,11 +19,11 @@ img {
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h1 style="color:black">Research<br />
+							<center><h1 style="color:black"><u>Research</u>u<br />
 						</header>
 						
 						<header class="major">
-							<h2 style="color:black">Close Binaries<br />
+							<center><h2 style="color:black">Close Binaries<br />
 						</header>
 						<center><img src="images/binaries.jpeg" width="600" height="300">
 <!-- 						<p>As a galactic archeologist, my research interests include stellar population chemistry, binary interaction, and stellar ages. -->
