--- a/page3.html
+++ b/page3.html
@@ -5,13 +5,11 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-<head>
 <style>
 body {
   background-image: "images/bg.jpg";
 }
 </style>
-</head>
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -26,7 +24,7 @@ body {
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<center><h1 style="color:black"><u>Research</u>u<br />
+							<center><h1 style="color:black"><u>Research</u><br />
 						</header>
 						
 						<header class="major">
