--- a/page3.html
+++ b/page3.html
@@ -5,17 +5,10 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-<head>
-<style>
-body {
-  background-image: "images/bg.jpg";
-}
-</style>
-</head>
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!-- <link rel="stylesheet" href="assets/css/main.css" /> -->
+		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
 	<!-- <body class="is-preload"> -->
