--- a/page3.html
+++ b/page3.html
@@ -21,6 +21,12 @@
 			<div id="main">
 				<!-- One -->
 					<section id="one">
+						<ul class="actions">
+							<li><a href="index.html" class="button" style="color:black">HOME</a></li>
+							<li><a href="page3.html" class="button" style="color:black">CV</a></li>
+							<li><a href="page4.html" class="button" style="color:black">OUTREACH</a></li>
+							<li><a href="page5.html" class="button" style="color:black">ABOUT ME</a></li>
+						</ul>
 						<header class="major">
 							<center><h1 style="color:black"><u>Research</u><br />
 						</header>
