--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<p style="color:black">My graduate thesis work attempted to study this by focusing on using the chemistry and ages of stellar populations, such as open clusters and binaries. To study stellar chemistry, I use radial velocities & high-resolution spectra from optical and near-infrared surveys such as GALAH and SDSS. And to study ages, I use synthetic stellar populations and integrated TESS lightcurves to detect variable star signals. </p>
 						<p style="color:black">Beyond my scientific research, I am also deeply passionate about science outreach and communication. While I have particiapted in numerous outreach activities throughout my career, currently I am focusing on two avenues of particiaption: I a writer for Astrobites, as well as the organizer for Salt Lake City's branch of Astronomy on Tap.<p>
 						<ul class="actions">
-							<li><a href="page2.html" class="button" style="color:black">CV</a></li>
+							<li><a href="page2.html" class="button" style="color:red">CV</a></li>
 							<li><a href="page3.html" class="button" style="color:black">RESEARCH</a></li>
 							<li><a href="page4.html" class="button" style="color:black">OUTREACH</a></li>
 							<li><a href="page5.html" class="button" style="color:black">ABOUT ME</a></li>
@@ -419,6 +419,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
