--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="website_main_pic.JPG" alt="" /></a>
+					<a href="#" class="image avatar"><img src="website_main_pic.JPG" alt="" width="128" height="128"/></a>
 					<h1><strong>Hi! I'm Amaya Sinha</strong>, a 5th year Ph.D<br />
 					candidate at the University of Utah<br />
 					studying physics and astronomy</a>.</h1>
