--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a><img src="website_main_pic.JPG" alt="" width="128" height="128"/></a>
+					<img src="website_main_pic.JPG" alt="" width="300" height="300"/>
 					<!-- <a href="#" class="image avatar"><img src="website_main_pic.JPG" alt="" width="128" height="128"/></a> -->
 					<h1><strong>Hi! I'm Amaya Sinha</strong>, a 5th year Ph.D<br />
 					candidate at the University of Utah<br />
@@ -420,6 +420,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
