--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 
 				<!-- One -->
 					<section id="one">
+						<p style="color:black"> Immediately after the Big Bang, the only elements in the Universe were hydrogen, helium, and a pinch of lithium. Understanding how we went from that simple broth to the complex stew of today's periodic table is at the core of galactic archeology. To understand this, we must understand the interplay between stars and their galactic environments.</p> 
 						<header class="major">
-							<h1 style="color:black">What I Do<br />
+							<h1 style="color:black"><u>What I Do</u><br />
 						</header>
-						<p style="color:black"> Immediately after the Big Bang, the only elements in the Universe were hydrogen, helium, and a pinch of lithium. Understanding how we went from that simple broth to the complex stew of today's periodic table is at the core of galactic archeology. To understand this, we must understand the interplay between stars and their galactic environments. 
 						<p style="color:black">My graduate thesis work attempted to study this by focusing on using the chemistry and ages of stellar populations, such as open clusters and binaries. To study stellar chemistry, I use radial velocities & high-resolution spectra from optical and near-infrared surveys such as GALAH and SDSS. And to study ages, I use synthetic stellar populations and integrated TESS lightcurves to detect variable star signals. </p>
-						<p style="color:black">Beyond my scientific research, I am also deeply passionate about science outreach and communication. While I have particiapted in numerous outreach activities throughout my career, currently I am focusing on two avenues of particiaption: I a writer for Astrobites, as well as the organizer for Salt Lake City's branch of Astronomy on Tap.<p>
+						<p style="color:black">Beyond my scientific research, I am also deeply passionate about science outreach and communication. While I have particiapted in numerous outreach activities throughout my career, currently I am focusing on two avenues of particiaption: I a writer for Astrobites, as well as the organizer for Salt Lake City's branch of Astronomy on Tap.</p>
 						<ul class="actions">
 							<li><a href="page2.html" class="button" style="color:red">CV</a></li>
 							<li><a href="page3.html" class="button" style="color:black">RESEARCH</a></li>
@@ -419,6 +419,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
