--- a/index.html
+++ b/index.html
@@ -5,14 +5,6 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
 	<head>
 		<title style="color:black">Amaya Sinha</title>
 		<meta charset="utf-8" />
@@ -39,7 +31,7 @@ hr {
 				<!-- One -->
 					<section id="one">
 						<p style="color:black"> <i>Immediately after the Big Bang, the only elements in the Universe were hydrogen, helium, and a pinch of lithium. Understanding how we went from that simple broth to the complex stew of today's periodic table is at the core of galactic archeology. To understand this, we must understand the interplay between stars and their galactic environments.</i></p> 
-						<hr/>
+						<hr width="100%;" color="black" size="5">
 						<header class="major">
 							<h1 style="color:black"><u>What I Do</u><br />
 						</header>
@@ -428,6 +420,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
