--- a/page3.html
+++ b/page3.html
@@ -44,6 +44,8 @@
 						<center><img src="images/bg.jpg" width="400" height="300">
 						<p></p>
 						<p style="color:black">Most stars in the Milky Way are born in open clusters (such as the Pleiades!). These clusters are born when a molecular cloud collapses and triggers star formation. Given that all the stars from a cluster are formed from the same molecular cloud, at the same time, they shoulld all have the same chemistry right? Broadly yes! But the degree to which the stars from a single cluster were chemically identical was a little uncertain. To answer this, we studied nearly three dozen open clusters within the Milky Way to measure how chemically similar their cluster members were to one another. Using SDSS-IV Data Release 17 chemical abundances across 20 elements, we found no evidence of chemical variation, and that we could confidently constrain open cluster intrinsic scatter to within 0.1 dex. The results of this work were used in the calibrations of SDSS-V data releases, and were published in The Astrophysical Journal in the fall of 2024. </p>
+						<hr width="100%;" color="black" size="5">
+						<hr width="100%;" color="black" size="5">
 						<header class="major">
 							<h2 style="color:black">Publications<br />
 						</header>
