--- a/page3.html
+++ b/page3.html
@@ -51,7 +51,8 @@
 						<header class="major">
 							<h2 style="color:black">Publications<br />
 						</header>
-						<div href="https://tinyurl.com/3hvvpxu3"> The draft of my my most recent paper on close binaries can be found here. <i>It was submitted to MNRAS in December 2025.</i> </div>
+						<a href="https://tinyurl.com/3hvvpxu3"> The draft of my my most recent paper on close binaries can be found here. <i>It was submitted to MNRAS in December 2025.</i> </a>
+						<p></p>
 						<a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...975...89S/abstract">[1] Sinha, A., “A Comprehensive Study of Open Cluster Chemical Homogeneity Using APOGEE and Milky Way Mapper Abundances”, <i>The Astrophysical Journal</i>, vol. 975, no. 1, Art. no. 89, IOP, 2024. doi:10.3847/1538-4357/ad78e1</a>
 					</section>
 			</div>
