added lotta words

--- a/page4.html
+++ b/page4.html
@@ -5,12 +5,15 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+<header id="header">
+</header>
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body class="is-preload">
+	<body>
+	<!-- <body class="is-preload"> -->
 
 		<!-- Header -->
 
@@ -18,32 +21,48 @@
 			<div id="main">
 				<!-- One -->
 					<section id="one">
-						<h2>Science Communication</h2>
-						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>AstroBites</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Astronomy on Tap</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="index.html" class="button" style="color:black">HOME</a></li>
+							<li><a href="page2.html" class="button" style="color:black">CV</a></li>
+							<li><a href="page3.html" class="button" style="color:black">RESEARCH</a></li>
+							<li><a href="page5.html" class="button" style="color:black">ABOUT ME</a></li>
 						</ul>
+						<header class="major">
+							<center><h1 style="color:black"><u>Outreach and Science Communication</u><br />
+						</header>
+						
+						<header class="major">
+							<center><h2 style="color:black">Astronomy on Tap<br />
+						</header>
+						<center><img src="images/aot_slc.png" width="300" height="300">
+						<center><img src="images/aot_schedule.png" width="300" height="900">
+						<p></p>
+						<p style="color:black"> Astronomy on Tap is a global organization started by astronomers in NYC to foster public awarness of astrophysical research, primarily through bars. The Salt Lake City chapter was started in 2022, and I took over as the organizer and host in 2023. In the past three years, I have over doubled the number of attendees (our record is >130!! people) per event, and have in total reached hundreds of people. Through my work on AoT, I have also developed strong connections between the astronomy community, local businesses, and the general public in SLC. I also worked closely with graduate students in other departments to advise on the creation of a more general Science on Tap, which has proven similarly successful. </p>
+						<hr width="100%;" color="black" size="5">
+						<header class="major">
+							<h2 style="color:black">Astrobites<br />
+						</header>
+						<center><img src="images/astrobites.png" width="400" height="400">
+						<p></p>
+						<p style="color:black"> Astrobites is a graduate-student run organization which writes daily summaries of published astronomy and astrophysical articles. I have been an author for Astrobites since January 2024, and have written over a dozen articles. These range from summaries of recent galactic archeology papers, to guides on navigating academia, to interviews with notable figures in astronomy. I also served as the Astrobites Media Intern during the 247th meeting of the American Astronomical Society, during which I was responsible for live-blogging the events, interviewing plenary speakers and running press conferences. A list of my most recent articles can be found below! </p>
+						<hr width="100%;" color="black" size="5">
+						<hr width="100%;" color="black" size="5">
+						<header class="major">
+							<h2 style="color:black">Publications<br />
+						</header>
+						<a href="https://tinyurl.com/3hvvpxu3"> The draft of my my most recent paper on close binaries can be found here. <i>It was submitted to MNRAS in December 2025.</i> </a>
+						<p></p>
+						<a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...975...89S/abstract">[1] Sinha, A., “A Comprehensive Study of Open Cluster Chemical Homogeneity Using APOGEE and Milky Way Mapper Abundances”, <i>The Astrophysical Journal</i>, vol. 975, no. 1, Art. no. 89, IOP, 2024. doi:10.3847/1538-4357/ad78e1</a>
 					</section>
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
+			<!-- <script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.poptrox.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="assets/js/main.js"></script> -->
 
 	</body>
 
