--- a/page4.html
+++ b/page4.html
@@ -34,19 +34,8 @@
 						<header class="major">
 							<center><h2 style="color:black">Astronomy on Tap<br />
 						</header>
-						<center><img src="images/aot_slc.png" width="300" height="300">
-						<div class="row">
-							<div class="column">
-								<img src="images/aot_slc.png" alt="Snow" style="width:30%">
-							</div>
-							<div class="column">
-								<img src="images/aot_slc.png" alt="Forest" style="width:30%">
-							</div>
-							<div class="column">
-								<img src="images/aot_slc.png" alt="Mountains" style="width:30%">
-							</div>
-						</div>
-						<!-- <center><img src="images/aot_schedule.png" width="300" height="900"> -->
+						<center><img src="images/aot_slc.png" width="400" height="300">
+						<center><img src="images/aot_images.png" width="400" height="400">
 						<p></p>
 						<p style="color:black"> Astronomy on Tap is a global organization started by astronomers in NYC to foster public awarness of astrophysical research, primarily through bars. The Salt Lake City chapter was started in 2022, and I took over as the organizer and host in 2023. In the past three years, I have over doubled the number of attendees (our record is >130!! people) per event, and have in total reached hundreds of people. Through my work on AoT, I have also developed strong connections between the astronomy community, local businesses, and the general public in SLC. I also worked closely with graduate students in other departments to advise on the creation of a more general Science on Tap, which has proven similarly successful. </p>
 						<hr width="100%;" color="black" size="5">
