--- a/page4.html
+++ b/page4.html
@@ -38,11 +38,17 @@
 						<center><img src="images/aot_images.png" width="400" height="400">
 						<p></p>
 						<p style="color:black"> Astronomy on Tap is a global organization started by astronomers in NYC to foster public awarness of astrophysical research, primarily through bars. The Salt Lake City chapter was started in 2022, and I took over as the organizer and host in 2023. In the past three years, I have over doubled the number of attendees (our record is >130!! people) per event, and have in total reached hundreds of people. Through my work on AoT, I have also developed strong connections between the astronomy community, local businesses, and the general public in SLC. I also worked closely with graduate students in other departments to advise on the creation of a more general Science on Tap, which has proven similarly successful. </p>
+						<p style="color:black"> For more information about Astronomy on Tap, please follow the link below. If you're interested in Salt Lake City's, our instagram and website are also linked here:</p>
+						<a href="https://astronomyontap.org"> Astronomy on Tap </a>
+						<p></p>
+						<a href="https://astronomyontap.org/locations/salt-lake-city-ut/"> Astronomy on Tap Salt Lake City </a>
+						<p></p>
+						<a href="https://www.instagram.com/aotsaltlakecity/"> Follow us on Instagram! </a>
 						<hr width="100%;" color="black" size="5">
 						<header class="major">
 							<h2 style="color:black">Astrobites<br />
 						</header>
-						<center><img src="images/astrobites.png" width="400" height="400">
+						<center><img src="images/astrobites.png" width="400" height="300">
 						<p></p>
 						<p style="color:black"> Astrobites is a graduate-student run organization which writes daily summaries of published astronomy and astrophysical articles. I have been an author for Astrobites since January 2024, and have written over a dozen articles. These range from summaries of recent galactic archeology papers, to guides on navigating academia, to interviews with notable figures in astronomy. I also served as the Astrobites Media Intern during the 247th meeting of the American Astronomical Society, during which I was responsible for live-blogging the events, interviewing plenary speakers and running press conferences. A list of my most recent articles can be found below! </p>
 						<hr width="100%;" color="black" size="5">
