--- a/page4.html
+++ b/page4.html
@@ -50,7 +50,7 @@
 						</header>
 						<center><img src="images/astrobites.png" width="400" height="300">
 						<p></p>
-						<p style="color:black"> Astrobites is a graduate-student run organization which writes daily summaries of published astronomy and astrophysical articles. I have been an author for Astrobites since January 2024, and have written over a dozen articles. These range from summaries of recent galactic archeology papers, to guides on navigating academia, to interviews with notable figures in astronomy. I also served as the Astrobites Media Intern during the 247th meeting of the American Astronomical Society, during which I was responsible for live-blogging the events, interviewing plenary speakers and running press conferences. A selection of my most recent articles can be found below! </p>
+						<p style="color:black"> Astrobites is a graduate-student run organization which writes daily summaries of published astronomy and astrophysical articles. I have been an author for Astrobites since January 2024, and have written over a dozen articles (in 2024 my articles were in the top 5 most read across the site!). These range from summaries of recent galactic archeology papers, to guides on navigating academia, to interviews with notable figures in astronomy. I also served as the Astrobites Media Intern during the 247th meeting of the American Astronomical Society, during which I was responsible for live-blogging the events, interviewing plenary speakers and running press conferences. A selection of my most recent articles can be found below! </p>
 						<br>
 						<a style="color:black"> <u>Article Summaries</u></a>
 						<br>
