--- a/page3.html
+++ b/page3.html
@@ -30,21 +30,31 @@
 						<header class="major">
 							<center><h1 style="color:black"><u>Research</u><br />
 						</header>
+						<header class="major">
+							<center><h2 style="color:black"><u>Active Research Projects</u><br />
+						</header>
 						
+						<hr width="100%;" color="black" size="5">
+						<header class="major">
+							<center><h2 style="color:black"><u>Past Research Projects</u><br />
+						</header>
+						<p style="color:black"> 1. Determining Cluster Ages using Integrated TESS Light-curves: Star clusters are invaluable tracers of star formation in galaxies. However, deriving accurate cluster ages is challenging, especially when individual member stars cannot be resolved. Wainer et al. 2023 showed the variability of a cluster’s integrated light is strongly linked to its age. I am working with collaborators at the University of Washington to build a convolutional neural network (CNN), trained on TESS integrated light-curves of over 100 Milky Way clusters, that overcomes traditional age-dating degeneracies and identifies cluster ages from pulsation modes. We are using this CNN to build a catalog of cluster ages in distant galaxies (Sinha et al. (in prep.)). </i> </p>
+						<p style="color:black"> 2. Measuring Stellar Parameters and Abundances in M-Dwarfs using Gaia-ESO: Given their ubiquity and longevity, M-dwarfs are ideally suited for population studies of the Milky Way that span a wide range of ages and chemistry. Behmard et al. 2025 showed that combining label transfer codes and detailed abundances significantly improved M-dwarf stellar parameters and abundances. I am working with Dr. Carrie Filion and the Flatiron Institute on this analysis. We intend to create a catalog of ~20,000 M-dwarfs with improved stellar parameters and abundances (Sinha et al. 2026b (in prep.)).  </i> </p>
+						<p style="color:black"> 3. Chemical Clocks and Stellar Population in GALAH DR4: Chemical clocks are an invaluable tool for studying the age distributions of large spectroscopic surveys such as APOGEE. GALAH, and Gaia. Using spectra from GALAH DR4, I am attempting to derive improved neutron capture abundances and stellar parameters. Furthermore, I am working with Dr. Natalie R. Myers at JHU to identify potential new chemical clocks in this dataset.   </i> </p>
 						<header class="major">
 							<center><h2 style="color:black">Close Binaries<br />
 						</header>
 						<center><img src="images/binaries.jpeg" width="600" height="300">
 						<center><img src="images/delta_orbital_separation_plot_joker.jpg" width="600" height="300">
-						<p></p>
-						<p style="color:black">While our own Sun is alone, many of the stars in our galaxy have companions. While some of these binaries have separations of 1000's of astronomical units (so called "wide" binaries) and can be studied fairly easily, studying close binaries (or binaries with separations < 100 AU) is significantly more difficult. Stars this close to one another aren't usually resolvable individually on the sky, meaning studying their intra-pair chemistry is impossible. And yet! Studying their chemistry is crucial for understanding binary star evolution, as stars this close can undergo truly fascinating evolution (e.g. common envelope evolution, mass transfer), which can affect their surface abundances through a variety of mechanisms. However even at these small separations, if both stars stay in a detached configuration, do they still have their birth chemistry?  To answer this, we studied close binaries in open clusters using SDSS-V APOGEE spectra and radial velocities. We determined binary membership for over a dozen open clusters, using through RV variability, and then performed a detailed abundance analysis using BACCHUS. The results of this paper were presented at the 2025 Sloan Collaboration meeting, and will be published in Sinha et. al <i> in prep. </i> </p>
+						<br>
+						<p style="color:black">While our own Sun is alone, many of the stars in our galaxy have companions. While some of these binaries have separations of 1000's of astronomical units (so called "wide" binaries) and can be studied fairly easily, studying close binaries (or binaries with separations < 100 AU) is significantly more difficult. Stars this close to one another aren't usually resolvable individually on the sky, meaning studying their intra-pair chemistry is impossible. And yet! Studying their chemistry is crucial for understanding binary star evolution, as stars this close can undergo truly fascinating evolution (e.g. common envelope evolution, mass transfer), which can affect their surface abundances through a variety of mechanisms. However even at these small separations, if both stars stay in a detached configuration, do they still have their birth chemistry?  To answer this, we studied close binaries in open clusters using SDSS-V APOGEE spectra and radial velocities. We determined binary membership for over a dozen open clusters, using through RV variability, and then performed a detailed abundance analysis using BACCHUS. The results of this paper were presented at the 2025 Sloan Collaboration meeting, and will be published in <i> Sinha et. al 2026. </i> </p>
 						<hr width="100%;" color="black" size="5">
 						<header class="major">
 							<h2 style="color:black">Open Clusters<br />
 						</header>
 						<center><img src="images/NGC2682_SDSS_DR14.jpg" width="400" height="400">
 						<center><img src="images/literature_comp_2682_all_3sigma.jpg" width="800" height="200">
-						<p></p>
+						<br>
 						<p style="color:black">Most stars in the Milky Way are born in open clusters (such as the Pleiades!). These clusters are born when a molecular cloud collapses and triggers star formation. Given that all the stars from a cluster are formed from the same molecular cloud, at the same time, they shoulld all have the same chemistry right? Broadly yes! But the degree to which the stars from a single cluster were chemically identical was a little uncertain. To answer this, we studied nearly three dozen open clusters within the Milky Way to measure how chemically similar their cluster members were to one another. Using SDSS-IV Data Release 17 chemical abundances across 20 elements, we found no evidence of chemical variation, and that we could confidently constrain open cluster intrinsic scatter to within 0.1 dex. The results of this work were used in the calibrations of SDSS-V data releases, and were published in The Astrophysical Journal in the fall of 2024. </p>
 						<hr width="100%;" color="black" size="5">
 						<hr width="100%;" color="black" size="5">
