--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<header class="major">
 							<h1 style="color:black"><u>What I Do</u><br />
 						</header>
-						<p style="color:black">My graduate thesis work focuses on using the chemistry and ages of stellar populations, such as open clusters and binaries, to study the chemical and dynamical evolution of the Milky Way. To study stellar chemistry, I use radial velocities & high-resolution spectra from optical and near-infrared surveys such as GALAH and SDSS. And to study ages, I use synthetic stellar populations and integrated TESS lightcurves to detect variable star signals. </p>
+						<p style="color:black">My graduate thesis work---supervised by Dr. Gail Zasowski---focuses on using the chemistry and ages of stellar populations, such as open clusters and binaries, to study the chemical and dynamical evolution of the Milky Way. To study stellar chemistry, I use radial velocities & high-resolution spectra from optical and near-infrared surveys such as GALAH and SDSS. And to study ages, I use synthetic stellar populations and integrated TESS lightcurves to detect variable star signals. </p>
 						<p style="color:black">Beyond my scientific research, I am also deeply passionate about science outreach and communication. While I have particiapted in numerous outreach activities throughout my career, currently I am focusing on two avenues of particiaption: I a writer for Astrobites, as well as the organizer for Salt Lake City's branch of Astronomy on Tap.</p>
 						<ul class="actions">
 							<li><a href="page2.html" class="button" style="color:red">CV</a></li>
