--- a/page5.html
+++ b/page5.html
@@ -30,7 +30,10 @@
 						<header class="major">
 							<center><h1 style="color:black"><u>ABOUT ME</u><br />
 						</header>
-						<p style="color:black"> <i>Top: An image of Messier 67 (or NGC 2682) from SDSS. Bottom: An image from Sinha et al. 2024, where I derive the upper limit on chemical homogeneity within M67 across 20 elements. I found the clusterr to be chemically similar within of 0.05 dex, limited only by the resolution of the APOGEE spectra.</i></p>
+						<header class="major">
+							<center><h1 style="color:rgb(163, 109, 9)"><u>Background</u><br />
+						</header>
+						<p style="color:black">I was born in India, and moved to Texas when I was three; as a result, I have a lot of practice making unusally spicy barbeque (one day I'll make a software with the backronym BRISKET...). After growing up near Dallas, I attended undergrad at the University of Texas at Austin, where I was a researcher in both the Nuclear Archeometry Lab under Dr. Sheldon Landsberger, as well as the Galactic Archeology group with Dr. Keith Hawkins. In 2021, I earned my B.S. in Physics and B.S. in Astronomy. I then moved to Salt Lake City, Utah to begin grad school at the University of Utah. And I haven't gotten my degree yet, so I'm stickin' around here for another bit longer! </p>
 					</section>
 			</div>
 
